--- a/Atividade_2_SQL.ipynb
+++ b/Atividade_2_SQL.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOK/PVKiAkAr3wLK+RqJAA8",
+      "authorship_tag": "ABX9TyPoHZz/X25u3eej8UIGkWCS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -666,7 +666,7 @@
     {
       "cell_type": "code",
       "source": [
-        "spark.sql(\"select * from Clientes inner join vendas on (Clientes.ClienteID = vendas.ClienteID) \\\n",
+        "spark.sql(\"select Clientes.Cliente,vendas.Data,itens_vendas.ValorTotal,produtos.Produto,vendedores.Vendedor from Clientes inner join vendas on (Clientes.ClienteID = vendas.ClienteID) \\\n",
         "                                  inner join itens_vendas on (vendas.VendasID = itens_vendas.VendasID) \\\n",
         "                                  inner join produtos on (itens_vendas.ProdutoID = produtos.ProdutoID) \\\n",
         "                                  inner join vendedores on (vendas.VendedorID = vendedores.VendedorID)\").show(5)"
@@ -676,23 +676,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r0DHQI9K3Daw",
-        "outputId": "b736a5d9-bca4-44c3-adf0-870f7378c1fb"
+        "outputId": "25374742-3386-4f2f-b5a2-7d85f5494854"
       },
-      "execution_count": 17,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+---------+-----------------+------+------+------+--------+----------+---------+--------+------+---------+--------+----------+-------------+----------+--------+----------------+---------+--------------------+---------+----------+----------------+\n",
-            "|ClienteID|          Cliente|Estado|Genero|Status|VendasID|VendedorID|ClienteID|    Data| Total|ProdutoID|VendasID|Quantidade|ValorUnitario|ValorTotal|Desconto|TotalComDesconto|ProdutoID|             Produto|    Preco|VendedorID|        Vendedor|\n",
-            "+---------+-----------------+------+------+------+--------+----------+---------+--------+------+---------+--------+----------+-------------+----------+--------+----------------+---------+--------------------+---------+----------+----------------+\n",
-            "|       91|   Cosme Zambujal|    BA|     M|Silver|       1|         1|       91|1/1/2019|8053.6|        2|       1|         1|      7820.85|   7820.85|     -  |         7820.85|        2|Bicicleta Altools...|9.201,00 |         1|    Armando Lago|\n",
-            "|       91|   Cosme Zambujal|    BA|     M|Silver|       1|         1|       91|1/1/2019|8053.6|        9|       1|         1|        97.75|     97.75|    0,98|           96.77|        9|Bermuda Predactor...|  115,00 |         1|    Armando Lago|\n",
-            "|       91|   Cosme Zambujal|    BA|     M|Silver|       1|         1|       91|1/1/2019|8053.6|       10|       1|         1|        135.0|     135.0|    1,35|          133.65|       10|Camiseta Predacto...|  135,00 |         1|    Armando Lago|\n",
-            "|      185|Gertrudes Hidalgo|    PA|     F|Silver|       2|         6|      185|1/1/2020| 150.4|        8|       2|         1|        150.4|     150.4|    1,50|           148.9|        8|Luva De Ciclismo ...|  188,00 |         6|   Iberê Lacerda|\n",
-            "|       31| Antão Corte-Real|    ES|     M|Silver|       3|         7|       31|2/1/2020|6087.0|        7|       3|         1|        155.0|     155.0|     -  |           155.0|        7|Capacete Gometws ...|  155,00 |         7|Jéssica Castelão|\n",
-            "+---------+-----------------+------+------+------+--------+----------+---------+--------+------+---------+--------+----------+-------------+----------+--------+----------------+---------+--------------------+---------+----------+----------------+\n",
+            "+-----------------+--------+----------+--------------------+----------------+\n",
+            "|          Cliente|    Data|ValorTotal|             Produto|        Vendedor|\n",
+            "+-----------------+--------+----------+--------------------+----------------+\n",
+            "|   Cosme Zambujal|1/1/2019|   7820.85|Bicicleta Altools...|    Armando Lago|\n",
+            "|   Cosme Zambujal|1/1/2019|     97.75|Bermuda Predactor...|    Armando Lago|\n",
+            "|   Cosme Zambujal|1/1/2019|     135.0|Camiseta Predacto...|    Armando Lago|\n",
+            "|Gertrudes Hidalgo|1/1/2020|     150.4|Luva De Ciclismo ...|   Iberê Lacerda|\n",
+            "| Antão Corte-Real|2/1/2020|     155.0|Capacete Gometws ...|Jéssica Castelão|\n",
+            "+-----------------+--------+----------+--------------------+----------------+\n",
             "only showing top 5 rows\n",
             "\n"
           ]
